# Agentic-Financial-Compliance-and-Risk-RAG

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test.py  test_queries.py
api/: main.py  routes.py  streaming.py
eval/: ablation.py  run.py
eval/data/: eval_set.json
eval/data/results/: eval_20260328_020318.json  eval_20260328_023250.json  eval_20260406_120538.json  eval_20260406_135839.json  eval_20260406_212930.json
frontend/: app.js  index.html  package.json  styles.css
ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  schemas.py  upserter.py
rag_agent/: __init__.py  graph.py  state.py
rag_agent/nodes/: __init__.py  retriever.py  router.py  synthesizer.py  table_reasoner.py  verifier.py
rag_agent/prompts/: __init__.py  router_prompt.py  synthesis_prompt.py  table_prompt.py  verification_prompt.py
skills/: eval-skill.md  ingestion-skill.md  langgraph-skill.md
